@@ -91,6 +91,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #4444: Allow assertRaises() to be used as a context handler, so that
+  the code under test can be written inline if more practical.
+
 - Issue #4739: Add pydoc help topics for symbols, so that e.g. help('@')
   works as expected in the interactive environment.
 
